
#ifndef AL5D_CPP_JOINTTYPE_HPP
#define AL5D_CPP_JOINTTYPE_HPP

namespace al5d
{
    enum JointType
    {
        JOINT_BASE,
        JOINT_SHOULDER,
        JOINT_ELBOW,
        JOINT_WRIST,
        JOINT_GRIPPER,
        JOINT_WRIST_ROTATE,
    };
}

#endif // AL5D_CPP_JOINTTYPE_HPP
